Stop using deprecated Locale constructors